# goattracker2

./: .gitignore  CMakeLists.txt  README.md  linux_howto  readme.txt
.github/workflows/: build.yml  codeql.yml  snapshot_build.yml
cmake/: FindExSID.cmake
examples/: 2xtest.sng  cabrinigreen.sng  consultant.sng  dojo.sng  everlasting.sng  example1.prg  example2.prg  example3.prg  example4.prg  funktest.sng  ghosttrackers.sng  goatcompo.txt  hyperspace.sng  sanction.sng  sfx_arp2.ins  sfx_expl.ins  sfx_gun.ins  sixpack.sng  tempo2test.sng  transylvanian.sng  unleash.sng  wavecmdtest.sng
examples/src/: example1.s  example2.s  example3.s  example4.s  makefile  sfx_arp1.s  sfx_arp2.s  sfx_expl.s  sfx_gun.s
morphos/: ReadMe2Guide.rexx  goat_tracker_commands.pdf.info  goattracker.guide  goattrk2.info
src/: altplayer.s  bcursor.hex  betaconv.c  gcommon.h  gconsole.c  gconsole.h  gdisplay.c  gdisplay.h  gfile.c  ghelp.c  ginstr.h  goattrk2.c  goattrk2.c.bak  goattrk2.h  goattrk2.rc  goattrk2.seq  gorder.c  gpattern.c  gplay.c  greloc.c  greloc.h  gsid.cpp  gsid.h  gsong.c  gsong.h  gsound.c  gsound.h  gt2reloc.c  makefile  makefile.common  makefile.mos  makefile.win  makefile.xmingw32  mod2sng.c  player.s  sngspli2.c
src/asm/: asmtab.c  log.c
src/bme/: bme_gfx.c  bme_gfx.h  bme_io.c  bme_kbd.c  bme_main.h  bme_snd.c  bme_win.c  bme_win.h  dat2inc.c  makefile  makefile.mos
src/resid/: wave.cc  wave.h
src/resid-fp/: sidfp.cpp
